--- a/index.html
+++ b/index.html
@@ -29,15 +29,6 @@
       box-sizing: border-box;
     }
 
-    .attribution {
-      font-size: 11px;
-      text-align: center;
-    }
-
-    .attribution a {
-      color: hsl(228, 45%, 44%);
-    }
-
     img {
       width: 100%;
       border-radius: 20px;
@@ -46,17 +37,13 @@
     body {
       background-color: hsl(212, 45%, 89%);
       font-family: 'Open Sans', sans-serif;
-      margin: 26px;
+
     }
 
     .container {
       background-color: hsl(0, 0%, 100%);
       padding: 17px;
-      /* margin: 36px; */
-      margin-top: 60px;
-      margin-bottom: 60px;
-      margin-left: auto;
-      margin-right: auto;
+      margin: auto;
       border-radius: 24px;
     }
 
@@ -64,12 +51,12 @@
       text-align: center;
       color: hsl(218, 44%, 22%);
       font-size: 15px;
-      font-family: outfit;
-      font-weight: 400;
+
     }
 
     .firstP {
       font-weight: 900;
+
     }
   </style>
 </head>
@@ -79,10 +66,7 @@
     <img src="images/image-qr-code.png" alt="">
     <p class="firstP">Improve your front-end skills by building projects</p>
     <p>Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
-    <div class="attribution">
-      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-      Coded by <a href="#">Your Name Here</a>.
-    </div>
+
   </div>
 
 
